# EffortStudyITS

./: .env.example  .gitattributes  .gitignore  .tmp_admin  .tmp_user  Dockerfile  README.md  docker-compose.standalone.yml  docker-compose.yml  install_dependencies.sh  load_courses.py  nginx.conf  package-lock.json  package.json  start_app.py
api/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
api/attempts/: exceptions.py  handle_attempts.py  schemas.py  test_diff.py
api/courses/: course_schema.json  handle_courses.py  parse_courses.py  parse_tasks.py  schemas.py
api/db/: __init__.py  db_connector_beanie.py  db_connector_motor.py
api/feedback/: handle_feedback.py  schemas.py
api/models/: __init__.py  model_manager.py
api/models/domain/: base.py  executor.py  feedback.py  runs.py  skill_weights_pfa_update.py
api/models/knowledge_tracing/: kt_base.py  pfa_model.py
api/models/pedagogical/: base.py  base_pedagogical.py  group_A_code_base.py  group_B_textual_base.py  prototype.py  (+7 more)
api/runs/: handle_runs.py  schemas.py
api/services/: email_sending.py  language_generation.py  study_metrics.py  test_lg.py
api/skills/: handle_skills.py  schemas.py
api/submissions/: handle_submissions.py  schemas.py
api/surveys/: handle_surveys.py  schemas.py
api/system/: about.md  data_collection.md  handle_settings.py  imprint.md  privacy_policy.md  retrieve_info.py  schemas.py
api/tasks/: handle_tasks.py  schemas.py
api/tests/: test_feedback_schema_defaults.py  test_handle_submissions.py
api/users/: auto_login.py  handle_users.py  schemas.py
(+875 files in other folders)
