[project]
name = "its03-api"
version = "0.0.6"
description = "ITS03 — Intelligent Tutoring System study platform"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.5",
    "APScheduler==3.10.4",
    "beanie==2.0.1",
    "edist==1.2.2",
    "fastapi==0.135.1",
    "fastapi-users==15.0.4",
    "fastapi-users-db-beanie==5.0.0",
    "fonttools==4.54.1",
    "httpx==0.28.1",
    "jsonschema==4.26.0",
    "matplotlib==3.10.8",
    "motor==3.7.1",
    "numpy==2.4.2",
    "Pillow==12.1.1",
    "pydantic==2.12.5",
    "pymongo==4.16.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.7.1",
    "scipy==1.17.1",
    "setuptools==75.1.0",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "uvicorn==0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]